client/main.css
/* ... */
.word-grid.inactive {
    opacity: 0.6;
}

.word-grid-cell {
    width: 70px;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.word-grid-cell.empty {
    border: 2px solid var(--bg-ll);
}

.word-grid-cell.typed-unchecked {
    border: 2px solid var(--bg-lll);
}

.word-grid-cell.hint-green {
    background-color: var(--hint-green);
}

.word-grid-cell.hint-yellow {
    background-color: var(--hint-yellow);
}

.word-grid-cell.hint-red {
    background-color: var(--hint-red);
}

.word-grid-cell.hint-none {
    background-color: var(--bg-ll);
}

.word-grid-cell.sabotage-target {
    border-color: var(--hint-red);
    transition: 150ms;
}
.word-grid-cell.sabotage-target:hover {
    border-width: 6px;
}

.word-grid-label {
    font-size: 2.2em;
    pointer-events: none;
    user-select: none;
    font-family: cascadia;
}

.word-grid-cell.animate-type {
    animation: word-grid-type 100ms ease 0s 1 forwards;
}
.word-grid-cell.animate-hint {
    animation: word-grid-hint 200ms ease 0s 1 forwards;
}
.word-grid-cell.invalid-animation {
    animation: word-grid-invalid 300ms ease 0s 1 forwards;
}
.word-grid-cell.win-animation {
    transition: 300ms;
    animation: 
        word-grid-win-start 700ms ease-in-out 0s 1 forwards,
        word-grid-win-loop 1000ms alternate infinite ease-in-out 700ms;
    box-shadow: 0 0 10px -3px var(--bg);
}
.word-grid-cell.win-animation .word-grid-label {
    animation: 
        word-grid-win-label 700ms ease-in-out 0s 1 backwards;
}

.rules-example .word-grid-cell {
    width: 50px;
    height: 50px;
}

.rules-example .word-grid-label {
    font-size: 1.8em;
}

@keyframes word-grid-type {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.2);
    }
    100% {
        transform: scale(1);
    }
}

@keyframes word-grid-hint {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(0, 1);
    }
    100% {
        transform: scale(1);
    }
}

@keyframes word-grid-invalid {
    0% {
        transform: translate(0, 0);
    }
    20% {
        transform: translate(10px, 0);
    }
    40% {
        transform: translate(-10px, 0);
    }
    60% {
        transform: translate(10px, 0);
    }
    80% {
        transform: translate(-10px, 0);
    }
    100% {
        transform: translate(0, 0);
    }
}

@keyframes word-grid-win-start {
    0% {
        transform: translate(0, 0) rotate(0);
    }
    100% {
        transform: translate(0, 10px) rotate(360deg);
    }
}

@keyframes word-grid-win-label {
    0% {
        transform: rotate(0);
    }
    99% {
        transform: rotate(-359deg);
    }
    100% {
        transform: rotate(-360deg);
    }
}

@keyframes word-grid-win-loop {
    0% {
        transform: translate(0, 10px);
    }
    100% {
        transform: translate(0, -10px);
    }
}

/* KEYBOARD */

#keyboard {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: stretch;
    gap: 7px;
    width: 550px;
}

.keyboard-line {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    justify-content: stretch;
    height: 60px;
    gap: 7px;
}

.keyboard-letter, .keyboard-enter, .keyboard-backspace {
    width: 1px;
    flex-grow: 1;

    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--keyboard-no-hint);

    transition: 600ms;
}

.keyboard-enter, .keyboard-backspace {
    flex-grow: 1.5;
}

.keyboard-void {
    width: 1px;
    flex-grow: 0.3;
}

.keyboard-letter > span {
    font-size: 1.6em;
}

.keyboard-enter > span{
    font-size: 1.2em;
}

.keyboard-backspace > span {
    font-size: 0.8em;
}

.keyboard-letter:hover, .keyboard-enter:hover, .keyboard-backspace:hover {
    filter: brightness(1.2);
}

.keyboard-letter *, .keyboard-enter *, .keyboard-backspace * {
    pointer-events: none;
    user-select: none;
}

.keyboard-letter.hint-gray {
    background-color: var(--hint-gray-keyboard);
    color: var(--hint-gray-keyboard-text);
}

.keyboard-letter.hint-green {
    background-color: var(--hint-green);
}

.keyboard-letter.hint-red {
    background-color: var(--hint-red);
}

.keyboard-letter.hint-yellow {
    background-color: var(--hint-yellow);
}

#keyboard-letter {
    
}

.keyboard-icon {
    filter: invert(1);
    width: 80%;
    max-height: 70%;
}

#key-enter-template, #key-backspace-template {
    display: none;
}

/* TOASTS */

#toasts-container {
    position: absolute;
    width: 100vw;

    display: flex;
    justify-content: center;
    align-items: center;

    transition: 400ms ease-out;
}

#toasts-container {
    top: -100px;
    transform: scale(0.5);
}

#toasts-container.visible {
    top: 20px;
    transform: scale(1);
}

.toast {
    display: block;
    background-color: var(--bg-lll);
    padding: 7px 14px;
}

.toast.error {
    background-color: var(--hint-red);
}

/* OPTIONS */

#options-container, #options-change-container, #options-readonly-container {
    position: relative;
    margin: 60px 0 50px 0;
    border: 2px solid var(--bg-lll);

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 15px;

    padding: 30px 100px 25px 100px;
}

#options-container-inner, #options-change-container-inner, #options-readonly-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.options-title {
    background-color: var(--bg);
    position: absolute;
    font-size: 1.3em;
    text-wrap: nowrap;

    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 0 5px;
}

.option-name {
    font-size: 1.3em;
}

.option-description {
    font-style: italic;
    color: var(--txt-d);
    font-size: 0.9em;
    margin-top: -8px;
    text-align: center;
}

.option-select {
    margin-left: 10px;
}

.option-row {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    justify-content: center;
}
/* ... */

